src/app/styles/global.scss
:root {
  --background-primary: #f5ead6;
  --background-secondary: #f9f9fb;
  --main-title-color: #203881;
  --text-color: #222429;
  --background-form-color: #e3e7f3;
  --background-error: #fdeded;
  --text-color-disabled: #6a717f;
  --text-error-color: #5f2120;
  --font-size-section-title: 40px;
  --font-size-sub-title: 30px;
}

body {
  background-color: var(--background-primary);
  height: 100%;
  color: var(--text-color);
  margin: 0;
  font-size: 15px;
  h2 {
    color: var(--main-title-color);
    font-size: var(--font-size-section-title);
  }
  h3 {
    font-size: var(--font-size-sub-title);
    color: var(--main-title-color);
  }
  h1 {
    color: var(--main-title-color);
    margin: 0;
  }
  p {
    color: var(--text-color);
    margin: 0;
  }
}
.container {
  max-width: 800px;
  margin-bottom: 2rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
  align-items: center;
}

.container-row {
  flex-direction: row;
  padding: 3rem 4rem;
  display: flex;
  gap: 1rem;
  align-items: center;
}

@media only screen and (max-width: 992px) {
  .container {
    max-width: 700px;
  }
  .container-row {
    flex-direction: column;
    padding: 3rem 4rem;
  }
}

@media only screen and (max-width: 600px) {
  .container {
    max-width: 90%;
  }
  .container-row {
    padding: 3rem 1rem;
  }
}

